# sahayak

./: Dockerfile  README.md  deploy.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  dependencies.py  main.py
app/middleware/: auth.py  logging.py
app/models/: fhir.py  incident.py  patient.py
app/routers/: emergency.py  history.py  profile.py
app/services/fhir/: mapper.py  sender.py
app/services/ingestion/: iot.py  speech.py  vision.py
app/services/reasoning/: gemini.py  prompts.py  safety.py
frontend/: app.js  index.html  styles.css
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_emergency_flow.py
tests/unit/: test_fhir_mapper.py  test_gemini_service.py  test_iot_normaliser.py  test_safety_validator.py  test_vision_parser.py
