[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sahayak"
version = "1.0.0"
description = "SAHAYAK — AI Caregiver Co-pilot | Healthcare Emergency Response"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAHAYAK Team" }]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "COM", "C4", "RET", "SIM", "ARG"]
ignore = ["S101", "COM812", "ARG001", "ARG002"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S", "ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
